Fix link outline overlapping text
Screenshot: https://i.imgur.com/n4dalBY.png

Fixed: 398784389
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6429285
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -1228,7 +1228,9 @@ devtools-toolbar {
   }
 
   &:focus-visible {
-    outline-width: unset;
+    outline: var(--sys-size-2) solid var(--sys-color-state-focus-ring);
+    outline-offset: 0;
+    border-radius: var(--sys-shape-corner-extra-small);
   }
 
   &.invalid-link {
